--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.3.0",
     "add": "^2.0.6",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
