--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "add": "^2.0.6",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.69.5",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
