--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-native": "0.69.5",
+    "react-native-remote-svg": "^2.0.10",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "^11.23.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
