--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
-    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.3.0",
     "add": "^2.0.6",
@@ -19,7 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.69.5",
-    "react-native-safe-area-context": "^4.3.3",
+    "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-web": "~0.18.7"
   },
