--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.69.5",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
