--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "^11.23.1"
+    "react-native-webview": "^11.23.1",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
