--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native-remote-svg": "^2.0.10",
     "react-native-svg": "^13.2.0",
     "react-native-webview": "^11.23.1",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
