--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "react-dom": "^18.0.0",
     "react-native": "0.69.5",
     "react-native-remote-svg": "^2.0.10",
-    "react-native-svg": "^13.2.0",
-    "react-native-webview": "^11.23.1",
-    "socket.io": "^4.5.2",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.2.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "^11.23.1",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
