--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
