--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
     "socket.io-client": "^2.4.0"
   },
