--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/elements": "^1.3.5",
@@ -22,13 +23,13 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-image-slider-box": "^2.0.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
-    "socket.io-client": "^2.4.0",
-    "@expo/webpack-config": "^0.17.0"
+    "socket.io-client": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
