--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "axios": "^0.27.2",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
@@ -23,6 +24,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-fast-image": "^8.6.1",
     "react-native-image-slider-box": "^2.0.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
