--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
+    "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "jwt-decode": "^3.1.2",
     "react": "18.0.0",
@@ -26,6 +27,7 @@
     "react-native": "0.69.5",
     "react-native-fast-image": "^8.6.1",
     "react-native-image-slider-box": "^2.0.6",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
