--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.69.5",
     "react-native-fast-image": "^8.6.1",
     "react-native-image-slider-box": "^2.0.6",
+    "react-native-material-menu": "^2.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
