--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-fast-image": "^8.6.1",
+    "react-native-floating-action": "^1.22.0",
     "react-native-image-slider-box": "^2.0.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
