--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-fast-image": "^8.6.1",
     "react-native-floating-action": "^1.22.0",
     "react-native-image-slider-box": "^2.0.6",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
