--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-svg": "12.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
+    "react-query": "^3.39.2",
     "socket.io-client": "^2.4.0"
   },
   "devDependencies": {
