--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "12.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.1.5",
